<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>metro-jpms-test</artifactId>
        <groupId>com.bravehorsie.metrojpms</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bravehorsie.metrojpms</groupId>
    <artifactId>jaxws-runtime-client</artifactId>


    <dependencies>
        <dependency>
            <groupId>com.sun.xml.ws</groupId>
            <artifactId>jaxws-rt</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.ws</groupId>
            <artifactId>jakarta.xml.ws-api</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                    <compilerArgs>
                        <!--<arg>&#45;&#45;add-modules</arg>-->
                        <!--<arg>com.sun.xml.ws.jaxws</arg>-->
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-mods</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/mods</outputDirectory>
                            <includeArtifactIds>jakarta.xml.bind-api,jakarta.xml.ws-api,istack-commons-runtime,jaxb-runtime,FastInfoset,saaj-impl,streambuffer,txw2,jaxws-rt,policy,jakarta.activation-api,jakarta.annotation-api,jakarta.jws-api,jakarta.xml.soap-api,stax-ex,mimepull</includeArtifactIds>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-libs</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
                            <includeArtifactIds>woodstox-core,gmbal,ha-api,management-api,stax2-api,pfl-asm,pfl-basic,pfl-basic-tools,pfl-dynamic,pfl-tf,pfl-tf-tools</includeArtifactIds>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>false</addClasspath>
                            <mainClass>
                                com.bravehorsie.jaxws.runtimeclient.Main
                            </mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>runtime</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <longModulepath>false</longModulepath>
                            <arguments>
                                <argument>--module-path</argument>
                                <argument>${project.build.directory}/mods:${project.build.directory}/jaxws-runtime-client-${project.version}.jar</argument>
                                <argument>--class-path</argument>
                                <argument>${project.build.directory}/libs/*</argument>
                                <argument>--add-modules</argument>
                                <argument>jdk.unsupported</argument>
                                <argument>--add-reads</argument>
                                <argument>com.sun.xml.ws.jaxws=ALL-UNNAMED</argument>
                                <!--<argument>&#45;&#45;add-reads</argument>-->
                                <!--<argument>com.bravehorsie.jaxws.runtimeclient=ALL-UNNAMED</argument>-->
                                <argument>--add-exports</argument>
                                <argument>com.bravehorsie.jaxws.runtimeclient/com.bravehorsie.jaxws.runtimeclient=ALL-UNNAMED</argument>
                                <argument>--module</argument>
                                <argument>com.bravehorsie.jaxws.runtimeclient/com.bravehorsie.jaxws.runtimeclient.Main</argument>

                                <!--<argument>&#45;&#45;list-modules</argument>-->
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>